# A-Project-ACS

./: README.md
background_app/: CMakeLists.txt  main.cpp
background_app/include/: opencv_face_process.h  socket_server.h  user_db.h  user_mngr.h
background_app/src/: opencv_face_process.cpp  socket_server.cpp  user_db.c  user_mngr.cpp
common/: config.ini
common/include/: config.h  protocol.h  public.h  ringbuffer.h
common/src/: protocol.c  ringbuffer.c
foreground_app/: CMakeLists.txt  config.ini  main.cpp
foreground_app/include/: capture.h  mainwindow.h  socket_client.h
foreground_app/src/: capture.c  mainwindow.cpp  socket_client.cpp
